# deco

./: CONTRIBUTING.md  Cargo.toml  DEVELOP.md  Justfile  LICENSE  Makefile  README.md  install.sh
.devcontainer/: Dockerfile  devcontainer.json
crates/deco-cli/: Cargo.toml
crates/deco-cli/src/: cli.rs  lib.rs  main.rs  test_support.rs
crates/deco-cli/src/commands/: build.rs  exec.rs  features.rs  mod.rs  outdated.rs  read_configuration.rs  run_user_commands.rs  set_up.rs  target.rs  templates.rs  up.rs  upgrade.rs
crates/deco-cli/tests/: cli_smoke.rs  parity_harness.rs
crates/deco-cli/tests/fixtures/parity/: README.md  manifest.example.json
crates/deco-cli/tests/fixtures/parity/workspaces/features-config-local/: README.md
crates/deco-cli/tests/fixtures/parity/workspaces/features-config-local/.devcontainer/: devcontainer.json
crates/deco-cli/tests/fixtures/parity/workspaces/features-config-local/.devcontainer/features/feature-a/: devcontainer-feature.json
crates/deco-cli/tests/fixtures/parity/workspaces/features-config-local/.devcontainer/features/feature-b/: devcontainer-feature.json
crates/deco-cli/tests/fixtures/parity/workspaces/features-manifest-dir/: README.md  feature-a.json  feature-b.json
crates/deco-cli/tests/fixtures/parity/workspaces/features-test/: README.md  broken.json
crates/deco-cli/tests/fixtures/parity/workspaces/lockfile-feature/: README.md
crates/deco-cli/tests/fixtures/parity/workspaces/lockfile-feature/.devcontainer/: devcontainer-lock.json  devcontainer.json
crates/deco-cli/tests/fixtures/parity/workspaces/lockfile-feature/.devcontainer/features/feature-a/: devcontainer-feature.json
crates/deco-cli/tests/fixtures/parity/workspaces/lockfile-sample/: README.md  deco-lock.json
crates/deco-cli/tests/fixtures/parity/workspaces/lockfile-upgrade/: README.md  deco-lock.json
crates/deco-cli/tests/fixtures/parity/workspaces/read-configuration-compose/: README.md
crates/deco-cli/tests/fixtures/parity/workspaces/read-configuration-compose/.devcontainer/: devcontainer.json
crates/deco-cli/tests/fixtures/parity/workspaces/read-configuration-image/: README.md
crates/deco-cli/tests/fixtures/parity/workspaces/read-configuration-image/.devcontainer/: devcontainer.json
crates/deco-cli/tests/fixtures/parity/workspaces/read-configuration-merged/: README.md
crates/deco-cli/tests/fixtures/parity/workspaces/read-configuration-merged/.devcontainer/: devcontainer.json
crates/deco-cli/tests/fixtures/parity/workspaces/read-configuration-missing/: README.md
crates/deco-cli/tests/fixtures/parity/workspaces/templates-collection/: README.md  alpha.json  beta.json
crates/deco-cli/tests/fixtures/parity/workspaces/templates-sample/: README.md  template.json
crates/deco-cli/tests/support/: harness.rs  manifest.rs  mod.rs
crates/deco-features/: Cargo.toml
crates/deco-features/src/: lib.rs
(+45 files in other folders)
