[workspace]
members = [
    "crates/deco-cli",
    "crates/deco-core-model",
    "crates/deco-config",
    "crates/deco-features",
    "crates/deco-templates",
    "crates/deco-lifecycle",
    "crates/deco-engine",
    "crates/deco-lockfile",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
clap = { version = "4.5.39", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
jsonc-parser = { version = "0.26.2", features = ["serde"] }
