[package]
name = "deco"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Rust-first dev container CLI"
default-run = "deco"

[workspace]
default-members = [
    ".",
    "crates/deco-cli",
    "crates/deco-core-model",
    "crates/deco-config",
    "crates/deco-features",
    "crates/deco-templates",
    "crates/deco-lifecycle",
    "crates/deco-engine",
    "crates/deco-lockfile",
]
members = [
    "crates/deco-cli",
    "crates/deco-core-model",
    "crates/deco-config",
    "crates/deco-features",
    "crates/deco-templates",
    "crates/deco-lifecycle",
    "crates/deco-engine",
    "crates/deco-lockfile",
]
resolver = "2"

[workspace.package]
edition = "2024"
authors = ["ilyar"]
license = "MIT"
version = "1.0.0-alpha.3"

[workspace.dependencies]
clap = { version = "4.6.1", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
jsonc-parser = { version = "0.32.3", features = ["serde"] }

[dependencies]
deco-cli = { path = "crates/deco-cli" }
