[package]
name = "deco-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "deco"
path = "src/main.rs"

[dependencies]
clap.workspace = true
deco-config = { path = "../deco-config" }
deco-core-model = { path = "../deco-core-model" }
deco-engine = { path = "../deco-engine" }
deco-features = { path = "../deco-features" }
deco-lifecycle = { path = "../deco-lifecycle" }
deco-lockfile = { path = "../deco-lockfile" }
deco-templates = { path = "../deco-templates" }
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
assert_cmd = "2.0.16"
predicates = "3.1.3"
tempfile = "3.20.0"
